<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF8FB2EC"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitleInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Instructions"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMedication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Meds"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewMeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="50dp"
        android:text=""
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sched"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewSched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="50dp"
        android:text=""
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAdditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="50dp"
        android:text=""
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewUpdatedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Refresh" />

</LinearLayout>